--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 	<!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 </head>
 
-<body class="overflow-hidden md:bg-zinc-300">
+<body class="overflow-hidden md:bg-zinc-300 {% if site.locked %}locked {% endif %}">
 	{% include locked.html %}
 <div class="max-md:h-screen max-md:overflow-hidden">
 	<div class="h-screen overflow-auto max-md:pb-28 viewport">
